[package]
name    = "xenu"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPL-3.0"

description = "Your X11 galactic overlord."
repository  = "https://github.com/meh/xenu"
keywords    = ["x11"]

[dependencies]
clap = "2"

[workspace]
members = ["xenu-kill", "xenu-background"]
