[package]
name    = "xenu-background"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPL-3.0"

description = "Xenu is artistic, and will paint a background on your screen."
repository  = "https://github.com/meh/xenu"
keywords    = ["x11"]

[dependencies]
lazy_static = "0.1"
xcb         = { version = "0.7" }
xcb-util    = { version = "0.1", features = ["image", "shm"] }

clap    = "2"
image   = "0.10"
palette = "0.2"
regex   = "0.1"
