[package]
name    = "xenu-background"
version = "0.1.1"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPL-3.0"

description = "Xenu is artistic, and will paint a background on your screen."
repository  = "https://github.com/meh/xenu"
keywords    = ["x11"]

[dependencies]
xcb      = { version = "0.7" }
xcb-util = { version = "0.1", features = ["image", "shm"] }

clap  = "2"
picto = "0.2"

[features]
default = []
nightly = ["picto/nightly"]
